--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,24 +1,11 @@
 <ion-header>
-  <ion-navbar color="amarelo">
+  <ion-navbar>
     <ion-title>
-      Jessica Design
+      GitHub
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-
-  <ion-card padding>
-    <img src="assets/img/marvin.png"/>
-    <ion-card-content>
-      <ion-card-title>
-        Nine Inch Nails Live
-        </ion-card-title>
-      <p>
-        The most popular industrial group ever, and largely
-        responsible for bringing the music to a mass audience.
-      </p>
-    </ion-card-content>
-  </ion-card>
+<ion-content padding>
 
 </ion-content>
