--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -6,3 +6,19 @@
   </ion-navbar>
 </ion-header>
 
+<ion-content>
+
+<ion-card>
+  <img src="https://avatars1.githubusercontent.com/u/22550191?v=4"/>
+  <ion-card-content>
+    <ion-card-title>
+      Erik Vinicius dos Santos Andreazi
+      </ion-card-title>
+    <p>
+      The most popular industrial group ever, and largely
+      responsible for bringing the music to a mass audience.
+    </p>
+  </ion-card-content>
+</ion-card>
+
+</ion-content>
