--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -8,6 +8,10 @@
 
 <ion-content>
 
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
 <ion-card>
   <img src="https://avatars1.githubusercontent.com/u/22550191?v=4"/>
   <ion-card-content>
