--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs color="fuschia">
+<ion-tabs color="orange">
   <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Perfil" tabIcon="person"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Repositorio" tabIcon="git-branch"></ion-tab>
