--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -15,8 +15,9 @@
         {{ perfil.name }}
     </ion-card-title>
       <p>Repositório: {{ perfil.public_repos }}</p><br>
-      <p>Data criação: {{ perfil.created_at }}</p>
-      <p>Última atualização: {{ perfil.updated_at }}</p>
+      <!--Formatar data do retorno do JSON: https://www.devmedia.com.br/forum/formatar-data-json/579682-->
+      <p>Data criação: {{ perfil.created_at | date: 'dd/MM/yyyy' }}</p>
+      <p>Última atualização: {{ perfil.updated_at | date: 'dd/MM/yyyy' }}</p>
   </ion-card-content>
 </ion-card>
 
