FABS buttons add

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,4 +8,16 @@
 
 <ion-content padding>
 
+    <ion-fab right bottom>
+        <button ion-fab color="orange">
+          <ion-icon name="add"></ion-icon>
+        </button>
+          <ion-fab-list side="top">
+            <button ion-fab color="primary"><ion-icon name="logo-facebook"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+          </ion-fab-list>
+      </ion-fab>
+
 </ion-content>
